# LSE-FS-UVigo-train

./: .gitignore  LICENSE  README.md  pyproject.toml
fingerspelling_trainer/: infer.py  main.py
fingerspelling_trainer/config/: config.yaml
fingerspelling_trainer/config/dataset/: combined.yaml  combined_finetune.yaml  esaude.yaml  fswild.yaml
fingerspelling_trainer/config/dataset/alphabet/: english.yaml  spanish.yaml
fingerspelling_trainer/config/learner/: translation.yaml
fingerspelling_trainer/config/learner/ctc/: focal.yaml  (+2 more)
fingerspelling_trainer/config/model/: aagcn.yaml  aagcn_lstm.yaml  aagcn_test.yaml  edge_conv.yaml  lstm.yaml  tcn_transformer.yaml
fingerspelling_trainer/data/: compose_transforms.py  data_module.py  json_dataset.py
fingerspelling_trainer/data/transformations/: canonicalize_hand.py  encode_label.py  filter_samples.py  mirror_hands_augmentation.py  remove_empty_samples.py  scale_keypoints.py  speed_augmentation.py
fingerspelling_trainer/notebooks/: eda.ipynb  eda_fswild.ipynb
fingerspelling_trainer/scripts/: compute_sampler_weights.py  fit_scaler.py  generate_weights.py  test_simmetry.py
fingerspelling_trainer/training/: ray_trainer.py
fingerspelling_trainer/training/learners/: base_learner.py  translation_learner.py
fingerspelling_trainer/training/models/: aagcn_test.py  edge_conv_translator.py  lstm.py
fingerspelling_trainer/training/utils/: alphabets.py  cer_metric.py  confussion_matrix.py  ctc_ramp_callback.py  decoders.py  fine_tune_utils.py  focal_ctc.py  fpc_quintiles.py  graph_utils.py  weighted_ctc.py
(+5 files in other folders)
